// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ChooseLineDropdown /> Opens dropdown when clicked and shows all lines 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state="open"
    data-open=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:rl:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:ri:"
      aria-expanded="true"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-none ui-not-open:rounded-md transition-[border-radius] ease-in-out duration-100 ui-open:rounded-none"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:rg:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:ri:"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full items-center justify-end px-3 text-left focus:outline-none w-full"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:rh:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading with preselected line 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-none ui-not-open:rounded-md transition-[border-radius] ease-in-out duration-100 ui-open:rounded-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full items-center justify-end px-3 text-left focus:outline-none w-full"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading with preselected line 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-none ui-not-open:rounded-md transition-[border-radius] ease-in-out duration-100 ui-open:rounded-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full items-center justify-end px-3 text-left focus:outline-none w-full"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading without pre-selected line 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-none ui-not-open:rounded-md transition-[border-radius] ease-in-out duration-100 ui-open:rounded-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r9:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full items-center justify-end px-3 text-left focus:outline-none w-full"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:ra:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading without pre-selected line 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="h-full w-full border border-grey bg-white px-2 py-3 focus:outline-none ui-not-open:rounded-md transition-[border-radius] ease-in-out duration-100 ui-open:rounded-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r9:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full items-center justify-end px-3 text-left focus:outline-none w-full"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:ra:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out ui-open:-rotate-180 ui-not-open:rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;
